[package]
name = "pngme_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.3.23", features = ["derive", "std"] }
crc = "3.0"

[lib]
name = "pngme_lib"
path = "src/lib.rs"